--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@rocketseat/eslint-config": "1.2.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.9",
+    "decimal.js": "10.4.3",
     "dotenv": "16.3.1",
     "fastify": "^4.19.2",
     "zod": "3.21.4"
