refactor: replace tsc to build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: run app
         run: |
           npm i
-          npx tsc
+          npm run build
 
       - name: run test coverage
         run: |
