--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "decimal.js": "10.4.3",
     "dotenv": "16.3.1",
     "fastify": "^4.19.2",
+    "rollup": "3.28.0",
     "zod": "3.21.4"
   }
 }
